<resources>
    <string name="title_start_str">Hot Go</string>
    <string name="title_dev_by_lulu">Design by Go-Coop </string>
    <string name="app_version">Version 1.0</string>
    <string name="title_profile">Taxi Near Driver</string>
    <string name="title_transfer">Transfer</string>
    <string name="title_redeem">Payout</string>
    <string name="title_payment">Deposit</string>
    <string name="title_trans_history">Lịch sử giao dịch</string>
    <string name="title_trip_history">Lịch sử chuyến đi</string>
    <string name="ic_header_cirle_full">&#xf111;</string>
    <string name="ic_header_cirle">&#xf10c;</string>
    <string name="tel">tel:</string>
    <string name="lbl_redeem_information">Redeem Information &#xf18e;</string>
    <string name="lbl_submit">LƯU</string>
    <string name="submit"><u>LƯU</u></string>
    <string name="lbl_cancel_trip">CANCEL TASK</string>
    <string name="lbl_begin_trip">BEGIN TASK</string>
    <string name="lbl_update_profile">Câu nhật hồ sơ</string>
    <string name="lbl_browse">DUYỆT</string>
    <string name="lbl_register">ĐĂNG KÍ</string>
    <string name="lbl_update">CẬP NHẬT</string>
    <string name="lbl_send">GỬI</string>
    <string name="lbl_end_trip">END TASK</string>
    <string name="lbl_contiune">Tiếp tục</string>
    <string name="lbl_arrived">Đã đến</string>
    <string name="lbl_arrived_a">Đã đến điểm đón</string>
    <string name="lbl_arrived_b">Tài xế đã đến điểm trả</string>
    <string name="lblBeginTask">Tasker on Task</string>
    <string name="lbl_driver_arrived">Tasker arrived A</string>
    <string name="lbl_paypal">PayPal</string>
    <string name="lbl_logout">Đăng xuất</string>
    <string name="lbl_in_process">In process</string>
    <string name="lbl_on_the_trip">On the trip</string>
    <string name="lblTaskerArrivingB">Tasker arriving B</string>
    <string name="lblArrivingB">Arriving B</string>
    <string name="lbl_contact_help"></string>
    <string name="lbl_link_contact_help"></string>
    <string name="currency">VND</string>
    <string name="unit_measure">Km</string>
    <string name="lbl_expiration_date">Expiration date</string>
    <string name="lbl_credit_cart_infomation">Credit cart information</string>
    <string name="lbl_redit_cart">Credit Cart</string>
    <string name="lbl_secure_code">Secure Code</string>
    <string name="lbl_rating_driver">Your task get</string>
    <string name="lbl_trip_passenger">Your task need</string>
    <string name="lbl_trip_driver">You earn from this task</string>
    <string name="lbl_id_driver">Id Tasker</string>
    <string name="lbl_name_passenger">Customer Tasker</string>
    <string name="lbl_rate">Đánh giá</string>
    <string name="lbl_start">Start:</string>
    <string name="lbl_end">End:</string>
    <string name="lbl_profile">Hồ sơ</string>
    <string name="lbl_home">Trang chủ</string>
    <string name="lbl_car_plate">Biển số xe:</string>
    <string name="lbl_car_plate_hint">30F:99999</string>
    <string name="lbl_plate">Plate</string>
    <string name="lbl_identity">Identity</string>
    <string name="lbl_phone">Số điện thoại</string>
    <string name="lbl_phone_passenger">Số điện thoại khách hàng</string>
    <string name="lbl_promotion">Promotion</string>
    <string name="lbl_trip_history">Lịch sử</string>
    <string name="lbl_order_confirm">Order Confirmed</string>
    <string name="lbl_payment_history">Histories</string>
    <string name="lbl_payment_transfer">Select Account</string>
    <string name="lbl_payment">THANH TOÁN</string>
    <string name="lbl_paynow">THANH TOÁN NGAY</string>
    <string name="lbl_share">CHIA SẺ</string>
    <string name="lbl_help">Trợ giúp</string>
    <string name="lbl_title_start_trip">Start Task Now</string>
    <string name="lbl_title_your_trip">Chuyến đi của bạn</string>
    <string name="lbl_online">ONLINE</string>
    <string name="lbl_offline">OFFLINE</string>
    <string name="lbl_register_as_driver">Trở thành lái xe</string>
    <string name="lbl_language">Language</string>
    <string name="lbl_request_car">Request Task</string>
    <string name="lbl_find_car">Find 5 car in 3.000m radius</string>
    <string name="btn_book">Book</string>
    <string name="btn_next">Next</string>
    <string name="btn_back">Back</string>
    <string name="lbl_from">A</string>
    <string name="lbl_to">B</string>
    <string name="lbl_facebook">Facebook</string>
    <string name="lbl_google">Google Plus</string>
    <string name="lbl_share_speak_driver">Share to get $50 for takser</string>
    <string name="lbl_share_speak_customer">or $20 for customer</string>
    <string name="lbl_share_1">Share to get $ for tasker and customer</string>
    <string name="lbl_description">Description</string>
    <string name="lbl_status">Trạng thái</string>
    <string name="lbl_bank_accout">Bank Account</string>
    <string name="lbl_document">Document</string>
    <string name="lblTypeCar">Task Type</string>
    <string name="lblJobCar">Task Type</string>
    <string name="lbl_you_can_login">You can login with Facebook, Google+</string>
    <string name="lbl_Facebook_Google">with Facebook, Google+</string>
    <string name="lbl_payout">Payout</string>
    <string name="lbl_avatar">Ảnh đại diện</string>
    <string name="lbl_name">Tên </string>
    <string name="lbl_photo">Photo</string>
    <string name="lbl_request_link1">Request Link</string>
    <string name="lbl_guide">Bạn có thể online để nhận được những yêu cầu</string>
    <string name="email_is_not_validated">Email chưa được xác thực</string>
    <string name="register_success">Đăng kí thành công</string>
    <string name="update_profile_success">Cập nhật thành công</string>
    <string name="register_failed">Đăng kí thất bại</string>
    <string name="action_cancellation_order_fee">CANCELLATION_ORDER_FEE</string>
    <string name="action_exchange_point">EXCHANGE_POINT</string>
    <string name="action_redeem_point">REDEEM_POINT</string>
    <string name="action_transfer_point">TRANSFER_POINT</string>
    <string name="action_trip_payment">TRIP_PAYMENT</string>
    <string name="action_passenger_share_bonus">PASSENGER_SHARE_BONUS</string>
    <string name="action_driver_share_bonus">DRIVER_SHARE_BONUS</string>
    <string name="msg_quit_app">Bạn có chắc muốn thoát?</string>
    <string name="msg_offline">Bạn có chắc muốn offline?</string>
    <string name="msg_logout">Bạn có chắc muốn đăng xuất?</string>
    <string name="msg_language">Bạn có chắc muốn đổi ngôn ngữ ?</string>
    <string name="msg_do_you_cancel">Bạn có chắc muốn hủy ?</string>
    <string name="msg_check_net_work">Vui lòng kiểm tra lại kết nối Internet !</string>
    <string name="lbl_english">English</string>
    <string name="lbl_chinese">中文</string>
    <string name="lbl_vn">Vietnamese</string>
    <string name="content_description">Nội dung mô tả </string>
    <string name="fa_bar_chart_o">&#xf080;</string>
    <string name="fa_file_pdf_o">&#xf1c1;</string>
    <string name="fa_calendar_o">&#xf133;</string>
    <string name="fa_user_secret">&#xf21b;</string>
    <string name="fa_credit_card">&#xf09d;</string>
    <string name="ic_star">&#xf005;</string>
    <string name="ic_user">&#xf007;</string>
    <string name="ic_home">&#xf015;</string>
    <string name="ic_payment">&#xf0d6;</string>
    <string name="ic_promotion">&#xf0a3;</string>
    <string name="ic_share">&#xf1e0;</string>
    <string name="ic_help">&#xf059;</string>
    <string name="ic_history">&#xf1da;</string>
    <string name="ic_online">&#xf0eb;</string>
    <string name="ic_register_as_driver">&#xf1ba;</string>
    <string name="ic_language">&#xf1ab;</string>
    <string name="ic_phone">&#xf095;</string>
    <string name="ic_rate">&#xf012;</string>
    <string name="ic_menu">&#xf0c9;</string>
    <string name="ic_facebook">&#xf09a;</string>
    <string name="ic_google">&#xf0d5;</string>
    <string name="ic_search">&#xe618;</string>
    <string name="ic_note">&#xf0f6;</string>
    <string name="ic_dolar"> &#xf155;</string>
    <string name="ic_length">&#xf07e;</string>
    <string name="ic_blance">&#xf19c;</string>
    <string name="ic_point">&#xf1c4;</string>
    <string name="ic_save">&#xe65f;</string>
    <string name="ic_photo">&#xf03e;</string>
    <string name="ic_avatar">&#xf234;</string>
    <string name="ic_model">&#xf091;</string>
    <string name="ic_year">&#xf073;</string>
    <string name="ic_mail">&#xf003;</string>
    <string name="ic_add">&#xf041;</string>
    <string name="ic_des">&#xf05a;</string>
    <string name="ic_brand">&#xf000;</string>
    <string name="ic_money">&#xf0d6;</string>
    <string name="ic_logout">&#xf011;</string>
    <string name="ic_car">&#xf1b9;</string>
    <string name="ic_state">&#xf239;</string>
    <string name="ic_city">&#xf041;</string>
    <string name="ic_delete">&#xf014;</string>
    <string name="lbl_enter_real_distance">Enter real distance (Km)</string>
    <string name="lbl_message_real_distance">Tổng</string>
    <string name="lbl_link1">1 seat avaiable (Link I)</string>
    <string name="lbl_link2">2 seat avaiable (Link II)</string>
    <string name="lbl_link3">3 seat avaiable (Link III)</string>
    <string name="lbl_request_link">Yêu cầu của bạn đã được gửi</string>
    <string name="lbl_you_are_now_online">You are now online</string>
    <string name="lbl_waiting_for_request">Đang đợi những yêu cầu từ khách hàng</string>
    <string name="lbl_awaiting">Đang đợi tài xế nhận chuyến đi</string>
    <string name="lbl_please">Vui lòng đợi</string>
    <string name="estimateFare">*Cước tạm tính:</string>
    <string name="estFare">*Cước tạm tính</string>
    <string name="pointEstimated">$100 ~ </string>
    <string name="lbl_please_wait_ten">(for demo please wait in 10 seconds)</string>
    <string name="btn_cancel_trip">CANCEL TASK</string>
    <string name="lblInfoInvalid">Sai thông tin</string>
    <string name="lblPayoutStripe">Payout Stripe</string>
    <string name="lbl_header_start_trip">Chuyến đi đã hoàn thành</string>
    <string name="lbl_header_trip_online">Bắt đầu chuyến đi</string>
    <string name="ic_gps">&#xe6bb;</string>
    <string name="lbl_address">Đía chỉ</string>
    <string name="lbl_state">State</string>
    <string name="lbl_city">City</string>
    <string name="cancel">Hủy</string>
    <string name="lbl_email">Email</string>
    <string name="lbl_brand_car">Thương hiệu xe</string>
    <string name="lbl_year_manufacturer">Năm sản xuất</string>
    <string name="lbl_model_car">Mẫu xe</string>
    <string name="lbl_header_trip_history">your tasker is detail task</string>
    <string name="lbl_trip_detail">Chi tiết chuyến đi</string>
    <string name="lbl_header_driver_start_trip">Tài xế đang đến</string>
    <string name="lbl_show_passenger">Hãy đi đến vị trí khách hàng của bạn</string>
    <string name="lbl_your_end_trip">Chuyến đi kết thúc</string>
    <string name="lbl_rating">Đánh giá tài xế</string>
    <string name="lbl_rating_link">Rating</string>
    <string name="lbl_starting_location">Bắt đầu</string>
    <string name="lbl_ending_location">Kết thúc</string>
    <string name="lbl_starting_location2">25 Los Angeles, America </string>
    <string name="ic_back">&#xf104;</string>
    <string name="lblCompany">GO-Coop</string>
    <string name="lblAboutUs1">Nhanh hơn và tiện hơn</string>
    <string name="lblAboutUs2">Tối ưu với người dùng</string>
    <string name="lblWebsite">https://hotgo.vn</string>
    <string name="forgot_password">Quên mật khẩu</string>
    <string name="estimated">(*:Tạm tính)</string>
    <string name="filter">Bộ lọc</string>
    <string name="lbl_min">Tói thiểu</string>
    <string name="lbl_max">Tối đa</string>
    <string name="reset"><u>Reset</u></string>
    <string name="apply">Apply</string>
    <string name="service">Dịch vụ</string>
    <string name="price_range">Price  Range</string>
    <string name="tasker">Lái xe</string>
</resources>