<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    android:orientation="vertical">

    <include layout="@layout/layout_header" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/primary"
            android:orientation="vertical"
            android:padding="@dimen/space_small">

            <!-- <hcpttaxinear.widget.JustifyTextView -->
            <!-- android:layout_width="match_parent" -->
            <!-- android:layout_height="wrap_content" -->
            <!-- android:text="@string/lbl_content_help" -->
            <!-- android:textColor="@color/white" -->
            <!-- android:layout_centerInParent="true"/> -->

            <com.app.hotgo.widget.MyTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/lblCompany"
                android:textColor="@color/text_color_primary"
                android:textSize="@dimen/text_size_xlarge" />

            <com.app.hotgo.widget.MyTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_vertical"
                android:gravity="center_horizontal"
                android:text="@string/lblAboutUs1"
                android:textColor="@color/text_color_primary" />


            <com.app.hotgo.widget.MyTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_vertical"
                android:gravity="center_horizontal"
                android:text="@string/lblAboutUs2"
                android:textColor="@color/text_color_primary" />

            <com.app.hotgo.widget.MyTextView
                android:id="@+id/txtWebsite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_vertical"
                android:gravity="center_horizontal"
                android:text="@string/lblWebsite"
                android:textColor="@color/yellow_dark" />

            <com.app.hotgo.widget.MyTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_vertical"
                android:gravity="center_horizontal"
                android:text="@string/app_version"
                android:textColor="@color/text_color_primary"
                android:visibility="gone" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>