<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical">

    <com.app.hotgo.widget.MyTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primary"
        android:padding="@dimen/space_tiny"
        android:text="@string/forgot_password"
        android:textColor="@color/text_color_primary"
        android:textSize="@dimen/text_size_xlarge" />

    <EditText
        android:id="@+id/txtUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/space_small"
        android:background="@drawable/bg_editext_border_black"
        android:hint="@string/lbl_email"
        android:padding="@dimen/space_small"
        android:textColor="@color/text_color_primary" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.app.hotgo.widget.MyTextView
            android:id="@+id/txtCancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="@drawable/bg_border_violet"
            android:gravity="center"
            android:padding="@dimen/space_tiny"
            android:text="@string/cancel"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_xlarge" />

        <com.app.hotgo.widget.MyTextView
            android:id="@+id/txtSend"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="@drawable/bg_border_orange"
            android:gravity="center"
            android:padding="@dimen/space_tiny"
            android:text="@string/lbl_send"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_xlarge" />
    </LinearLayout>

</LinearLayout>