<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/primary"
        android:orientation="vertical"
        android:visibility="visible">

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="@dimen/space_xlargex"
            android:background="@color/primary">

            <ImageButton
                android:id="@+id/btnBack"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@color/transparent"
                android:gravity="center"
                android:src="@drawable/ic_header_back"
                android:text="@string/ic_back" />

            <com.app.hotgo.widget.MyTextView
                android:id="@+id/lblTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginLeft="@dimen/space_large"
                android:textColor="@color/text_color_primary"
                android:textSize="@dimen/text_size_title"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/iv_search"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignParentRight="true"
                android:background="@color/transparent"
                android:padding="@dimen/dp_12"
                android:src="@drawable/ic_black_search" />
        </RelativeLayout>

        <com.omadahealth.github.swipyrefreshlayout.library.SwipyRefreshLayout
            android:id="@+id/swrLayout"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            app:srl_direction="both">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rcv_product"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"></android.support.v7.widget.RecyclerView>
        </com.omadahealth.github.swipyrefreshlayout.library.SwipyRefreshLayout>

        <com.app.hotgo.widget.MyTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/dp_14"
            android:text="@string/estimated"
            android:textColor="@color/green" />
    </LinearLayout>

    <!--layout filter android:layout_gravity="right"-->
    <RelativeLayout
        android:id="@+id/layout_drawer"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="right"
        android:background="@color/primary"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/space_xlargex"
            android:background="@color/primary">

            <ImageButton
                android:id="@+id/iv_close_filter"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@color/transparent"
                android:gravity="center"
                android:src="@drawable/ic_header_back"
                android:text="@string/ic_back" />

            <com.app.hotgo.widget.MyTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginLeft="@dimen/space_large"
                android:text="@string/filter"
                android:textColor="@color/text_color_primary"
                android:textSize="@dimen/text_size_title" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/relativeLayout"
            android:layout_marginLeft="@dimen/dp_16"
            android:orientation="vertical">

            <com.app.hotgo.widget.MyTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_25"
                android:text="@string/service"
                android:textColor="@color/text_hint_two"
                android:textSize="@dimen/text_size_normal" />

            <com.app.hotgo.widget.MyEditText
                android:id="@+id/edt_product_name"
                style="@style/et_edit_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:textSize="@dimen/text_size_normal" />

            <com.app.hotgo.widget.MyTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_25"
                android:text="@string/tasker"
                android:textColor="@color/text_hint_two"
                android:textSize="@dimen/text_size_normal" />

            <com.app.hotgo.widget.MyEditText
                android:id="@+id/edt_shop_name"
                style="@style/et_edit_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                android:inputType="text" />

            <com.app.hotgo.widget.MyTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_25"
                android:text="@string/price_range"
                android:textColor="@color/text_hint_two"
                android:textSize="@dimen/text_size_normal" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.app.hotgo.widget.MyEditText
                    android:id="@+id/edt_min_price"
                    style="@style/et_edit_profile"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/lbl_min"
                    android:imeOptions="actionDone"
                    android:inputType="number"
                    android:textSize="@dimen/text_size_normal" />

                <com.app.hotgo.widget.MyEditText
                    android:id="@+id/edt_max_price"
                    style="@style/et_edit_profile"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/lbl_max"
                    android:imeOptions="actionDone"
                    android:inputType="number"
                    android:textSize="@dimen/text_size_normal" />
            </LinearLayout>

            <com.app.hotgo.widget.MyTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_25"
                android:text="@string/lbl_rate"
                android:textColor="@color/text_hint_two"
                android:textSize="@dimen/text_size_normal" />

            <me.zhanghai.android.materialratingbar.MaterialRatingBar
                android:id="@+id/ratingBar"
                style="@style/Widget.MaterialRatingBar.RatingBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/dp_30"
                android:rating="0"
                android:stepSize="1"
                app:mrb_fillBackgroundStars="false"
                app:mrb_progressBackgroundTint="@color/yellow_dark"
                app:mrb_progressTint="@color/yellow_dark"
                app:mrb_secondaryProgressTint="@color/yellow_dark" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal"
            android:padding="@dimen/dp_14">

            <com.app.hotgo.widget.MyTextView
                android:id="@+id/tv_reset"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/dimen_05x"
                android:layout_weight="1"
                android:gravity="center"
                android:paddingTop="@dimen/dp_12"
                android:paddingBottom="@dimen/dp_14"
                android:text="@string/reset"
                android:textAllCaps="true"
                android:textColor="@color/green"
                android:textSize="@dimen/text_size_large" />

            <com.app.hotgo.widget.MyTextView
                android:id="@+id/tv_apply"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen_05x"
                android:layout_weight="1"
                android:background="@drawable/bg_border_green"
                android:gravity="center"
                android:paddingTop="@dimen/dp_12"
                android:paddingBottom="@dimen/dp_14"
                android:text="@string/apply"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_large" />
        </LinearLayout>
    </RelativeLayout>
</android.support.v4.widget.DrawerLayout>