<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/primary">

        <com.app.hotgo.widget.TextViewFontAwesome
            android:id="@+id/btnMenu"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@color/transparent"
            android:gravity="center"
            android:text="@string/ic_menu"
            android:textColor="@color/text_color_primary"
            android:textSize="@dimen/space_normal" />

        <com.app.hotgo.widget.MyTextView
            android:id="@+id/lblTitle"
            style="@style/Layout.WrapWidthHeight"
            android:layout_centerInParent="true"
            android:text="@string/lbl_share"
            android:textStyle="bold"
            android:textColor="@color/text_color_primary"
            android:textSize="@dimen/text_size_header" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/btnShareFacebook"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_button"
            android:layout_marginLeft="@dimen/margin_horizontal_xxlarge"
            android:layout_marginRight="@dimen/margin_horizontal_xxlarge"
            android:background="@drawable/bg_facebook"
            android:orientation="horizontal">

            <com.app.hotgo.widget.TextViewFontAwesome
                android:id="@+id/imageView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/margin_left_ic"
                android:text="@string/ic_facebook"
                android:textColor="@color/white" />

            <com.app.hotgo.widget.MyTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:gravity="center"
                android:text="@string/lbl_facebook"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_large" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/btnShareGmail"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_button"
            android:layout_marginBottom="@dimen/margin_vertical"
            android:layout_marginLeft="@dimen/margin_horizontal_xxlarge"
            android:layout_marginRight="@dimen/margin_horizontal_xxlarge"
            android:layout_marginTop="@dimen/margin_vertical"
            android:background="@drawable/bg_google"
            android:orientation="horizontal">

            <com.app.hotgo.widget.TextViewFontAwesome
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/margin_left_ic"
                android:text="@string/ic_google"
                android:textColor="@color/white" />

            <com.app.hotgo.widget.MyTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/lbl_google"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_large" />
        </RelativeLayout>

        <com.app.hotgo.widget.MyTextView
            android:id="@+id/lbl_Share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/margin_horizontal"
            android:layout_marginRight="@dimen/margin_horizontal"
            android:textColor="@color/text_color_primary"
            android:textSize="@dimen/text_size_small" />

        <com.app.hotgo.widget.MyTextView
            android:id="@+id/lbl_share_customer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/margin_horizontal"
            android:layout_marginRight="@dimen/margin_horizontal"
            android:textColor="@color/text_color_primary"
            android:textSize="@dimen/text_size_small" />
    </LinearLayout>


</RelativeLayout>